--- a/resources/lang/cz.json
+++ b/resources/lang/cz.json
@@ -24,7 +24,7 @@
     "Removes any hair:": "Odstraní jakýkoliv typ chlupů:",
     "effective on all hair types - fine, grey, red, thick, or thin.": "Bez ohledu na strukturu nebo barvu - jemné, šedé, rudé, husté a tenké.",
     "Ideal for any area:": "Ideální pro různé oblasti:",
-    "it is a jewellery technique allowowing each hair to be removed individually. Hair can be removed absolutely anywhere including single hairs on the face..": "Jde o klenotnickou techniku - každý chlup je odstraněn individuálně. Chlupy lze odstranit kdekoli, včetně jednotlivých chlupů na obličeji.",
+    "it is a jewellery technique allowowing each hair to be removed individually. Hair can be removed absolutely anywhere including single hairs on the face.": "Jde o klenotnickou techniku - každý chlup je odstraněn individuálně. Chlupy lze odstranit kdekoli, včetně jednotlivých chlupů na obličeji.",
     
     "REASONS TO CHOOSE WAXING": "DŮVODY PRO VÝBĚR VOSKOVÁNÍ",
     "Long-lasting effect:": "Dlouhotrvající efekt:",
@@ -57,7 +57,7 @@
     "Session time varies by area. Upper lip may take minutes, while legs could take over an hour.": "Délka sezení elektroepilace závisí na ošetřované oblasti. Například odstranění chlupů z horního rtu může trvat jen několik minut, zatímco ošetření nohou by mohlo trvat hodinu nebo více.",
     
     "How should I prepare for an electroepilation session?": "Jak bych se měl připravit na sezení elektroepilace?",
-    "It is recommended to have hair in the targeted area not too short. Avoid sunburns, self-tanning products, and skin creams/oils before the session. Also, refrain from using creams or oils on the skin prior to the session": "Doporučuje se mít vlasy v cílové oblasti ne příliš krátké. Před zákrokem se vyvarujte spálení na slunci a produktům na samoopalování. Také se zdržte používání krémů nebo olejů na kůži před sezením",
+    "It is recommended to have hair in the targeted area not too short. Avoid sunburns, self-tanning products, and skin creams/oils before the session. Also, refrain from using creams or oils on the skin prior to the session.": "Doporučuje se mít vlasy v cílové oblasti ne příliš krátké. Před zákrokem se vyvarujte spálení na slunci a produktům na samoopalování. Také se zdržte používání krémů nebo olejů na kůži před sezením",
     
     "How often should I undergo electroepilation to achieve the best results?": "Jak často bych měl podstoupit elektroepilaci, abych dosáhl nejlepších výsledků?",
     "The recommended frequency can vary, but typically starting with sessions every 1-2 weeks is advised, gradually spacing them out as hair growth diminishes.": "Doporučená frekvence se může lišit, ale obvykle se doporučuje začít sezeními každý týden nebo dva, postupně je od sebe oddělovat, jakmile chlupů ubývá.",
